fixed side nav scrollbar issue

--- a/css/Site.css
+++ b/css/Site.css
@@ -42,7 +42,7 @@ h1::before, h2::before {
 /* Main header */
 #part0{
   color:black!important;
-  font-size: 400%;
+  font-size: 300%;
   font-weight: bolder;
   font-family: 'Courier New', Courier, monospace;
   border: 0px!important;
@@ -105,7 +105,7 @@ h1::before, h2::before {
 
 #mySidebar{
   position: relative;
-  overflow-x:hidden;
+  overflow:hidden;
 }
 
 #TOCprint > ul{
@@ -119,12 +119,31 @@ h1::before, h2::before {
 }
 
 #TOCprint{
-  padding: 0 18px;
+  padding: 0p 18px;
   
-  max-height: none;
-  overflow: hidden;
+  max-height: calc(100% - 60px);
+  overflow-y: scroll!important;
   transition: max-height 0.5s ease-out;
+ 
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera*/
+#TOCprint::-webkit-scrollbar{
+  width: 10px;
+  height: 20px;
+  background-color: #f0f0f0; /* or add it to the track */
+}
+#TOCprint::-webkit-scrollbar-thumb{
+  width: 10px;
+  height: 20px;
+  background-color: #aaa; /* or add it to the track */
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+/* #TOCprint {
+  -ms-overflow-style: none;  /* IE and Edge */
+  /* scrollbar-width: none;  Firefox */
+/* }  */
 
 /* Style the button that is used to open and close chat */
 
@@ -147,6 +166,7 @@ h1::before, h2::before {
   position: absolute;
   bottom:0px;
   z-index: 2;
+ 
 }
 
 #collapsible:hover {
