--- a/css/blurb.css
+++ b/css/blurb.css
@@ -11,6 +11,7 @@
     position: relative;
     padding: 2rem 1rem;
     margin: 30px 0px;
+    box-shadow: 1px 1px 5px #838383;
   }
 
 /* default style for all large blurbs */  
@@ -20,6 +21,7 @@
     padding: 4rem 1rem;
     margin: 50px 0px;
     border: 3px solid;
+    box-shadow: 1px 1px 5px #838383;
     
   }
 
@@ -29,7 +31,8 @@
     width: calc(100% + 50px - 2rem)!important;
     left: calc(-25px + 1rem);
     top: -30px;
-    padding: 5px 0px;   
+    padding: 5px 0px;
+    box-shadow: 2px 2px 5px #474747;   
     
 }
 
@@ -40,6 +43,7 @@
     left: calc(-25px + 1rem);
     bottom:-5px;
     padding: 0px 20px;
+    box-shadow: 2px 2px 5px #474747;
 }
 
 .roundboxL > iframe{
@@ -59,6 +63,7 @@
   padding: 5px 15px;
   text-align: center;
   position: absolute;
+  box-shadow: 1px 1px 3px #838383;
 
 }
 
@@ -82,15 +87,19 @@
     margin: 30px;
     border-radius: 5px!important;
  }
+
  .Materials header{
-  
-  border-radius: 5px!important;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 /*********************************************************************************/
 /* Equation box formats */
 .Equation{
     background-color:#ccc!important;
   }
+.Equation::before{
+  display: none;
+}
 
 .Equation::after{
     counter-increment: equation;
@@ -204,6 +213,7 @@
     font-size: xxx-large;
     transform: rotate(340deg);
     text-shadow: 1px 3px 5px #7a7850;
+    box-shadow: 0px 0px;
   }
 
 /*********************************************************************************/
@@ -225,6 +235,7 @@
     top:-55px;
     font-size: xxx-large;
     border:5px solid black;
+    box-shadow: 0px 0px;
   }
 
 
